--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,98 +11,115 @@ layout: base
   
     <div class="news"><div class="news">
 
-      <!-- Current News Section -->
-      <h3>News:</h3>
-<ul>
-  <li>
-    <b>8, Nov.</b> Two <b>Oral papers</b> are accepted to <span style="color:#B31B1B;font-weight:bold;">AAAI 2026</span> in <a href="https://yanyan-li.github.io/project/gs/4dgsslam.html">RiemanLine Parametrization</a> and Active3D</a>.
-    [<a href="https://github.com/yanyan-li/RiemanLine/tree/master" >Source Code</a>|<a href="https://www.arxiv.org/pdf/2508.04335" >Paper</a>] of RiemanLine, [<a href="https://yanyan-li.github.io/project/vlx/active3d.html" >Project Page</a>] of Active3D.
-  </li>
-  <li>
-  <b>26, Oct.</b> Chaired the <span style="color:#0000FF;font-weight:bold;">Online Session 3 – Digital Image Processing and Applications</span> at IEEE ICRCV.
-  </li>
-  <li>
-    <b>11, Oct.</b> Appointed as an Associate Editor of <span style="color:#0000FF;font-weight:bold;">IEEE Robotics and Automation Letters</span> (<a href="https://www.ieee-ras.org/publications/ra-l">RA-L</a>). Looking forward to working with the great editorial board and contributing to the robotics community!     
-  </li>
-  <li>
-    <b>19, Sep.</b> One paper is accepted to <span style="color:#B31B1B;font-weight:bold;">NeurIPS 2025</span>: 4D3R: Motion-Aware Neural Reconstruction and Rendering of Dynamic Scenes from Monocular Videos.     
-  </li>
-  <li>
-    <b>18, Aug.</b> The review process of <a href="https://4drobotics-iros2025.github.io/">IROS2025 Workshop AIR4D</a> was completed. Looking forward to seeing you in Hangzhou! 
-  </li>
-  <li>
-    <b>6, Aug.</b> Our New <span style="color:#2ECC71;font-weight:bold;">arXiv</span> paper: Riemannian Manifold Representation of 3D Lines for Factor Graph Optimization. [<a href="https://arxiv.org/pdf/2508.04335">Paper</a> | <a href="https://github.com/yanyan-li/RiemanLine">Code</a>] can be obtained.
-  </li>
-  <li>
-    <b>27, June.</b> Three papers are accepted to <span style="color:#B31B1B;font-weight:bold;">ICCV 2025</span> in <a href="https://yanyan-li.github.io/project/gs/4dgsslam.html">4D SLAM</a>; <a href="https://arxiv.org/pdf/2508.06546">Scene Graph Prediction</a>; <a href="https://arxiv.org/pdf/2412.05548">Autonomous Driving Gaussian Splatting</a>.     
-  </li>
-  <li>
-    <b>25, June.</b> One paper is accepted to <span style="color:#B31B1B;font-weight:bold;">Computers & Graphics</span>.
-  <li>
-    Invited to give a talk at <span style="color:#B31B1B;font-weight:bold;">Tianjin University</span> on June 3, 2025: <span style="color:#033344;font-weight:bold;">Accurate Localization and Scene Reconstruction in 4D Space</span>.
-    </li>
-  <li>
-    <b>9, May.</b> We're excited to announce that the <span style="color:#0000FF;font-weight:bold;">1st Workshop on Advancements for Intelligent Robotics in 4D Scenes: Localization, Reconstruction, Rendering, and Generation</span> will be held in <span style="color:#B31B1B;font-weight:bold;">IROS 2025 (Hangzhou, China)</span>: <a href="https://4drobotics-iros2025.github.io/">Website </a> </li>
-  <li>
-    <b>15, April.</b> Our paper: 
-    SE (3)-Equivariance Learning for Category-level Object Pose Estimation 
-    (<a href="https://ieeexplore.ieee.org/abstract/document/10964769/">Paper</a>) is accepted to <span style="color:#B31B1B;font-weight:bold;">IEEE TIM 2025</span>.
-  </li>
-  <li>
-    <b>20, March.</b> Our new <span style="color:#2ECC71;font-weight:bold;">arXiv</span> paper: 
-    4D Gaussian Splatting SLAM 
-    (<a href="https://arxiv.org/abs/2503.16710">Paper</a>) can be obtained.
-  </li>
-  <li>
-    <b>11, March.</b> Our new <span style="color:#2ECC71;font-weight:bold;">arXiv</span> paper: 
-    Robust Surface Reconstruction 
-    (<a href="https://arxiv.org/abs/2503.08093">Paper</a>) can be obtained.
-  </li>    
-  <li>
-    <b>26, Fed.</b> Our paper: 
-    Learnable Infinite Taylor Gaussian for Dynamic View Rendering 
-    (<a href="https://arxiv.org/html/2412.04282v2">Paper</a>) is accepted to <span style="color:#B31B1B;font-weight:bold;">CVPR2025</span>.
-  </li>
-  <li>
-    <b>28, Jan.</b> Our paper: 
-    Lifelong Localization using Adaptive Submap Joining and Egocentric Factor Graph 
-    (<a href="https://arxiv.org/pdf/2409.10172">Paper&amp;Code</a>) is accepted to <span style="color:#B31B1B;font-weight:bold;">ICRA2025</span>.
-  </li>
-  <li>
-    <b>13, Jan.</b> Our new <a href="https://ieeexplore.ieee.org/abstract/document/10839262">paper</a> is accepted to <span style="color:#B31B1B;font-weight:bold;">IEEE Sensors Journal</span>
-  </li>
-</ul>
-    
-      <!-- News of 2024 Section -->
-      <h3>2024:</h3>
+  <h3>News:</h3>
       <ul>
         <li>
-          Our new paper, ShapeMaker, is accepted to CVPR2024.
-        </li>
-        <li>
-          Our New arXiv paper (28.Nov.2024): SmileSplat: Generalizable Gaussian Splats for Unconstrained Sparse Images (<a href="https://yanyan-li.github.io/project/gs/smilesplat.html">Project</a>) can be obtained.
-        </li>
-        <li> 
-          Our Paper (27.Nov.2024) got accepted for publication in IEEE TIM:
-          <ul>
-            <li>Accurate Visual Odometry by Leveraging 2DoF Bearing-Only Measurements</li>
-          </ul>
-        </li>
-        <li>
-          Our New arXiv paper (01.Oct.2024): Robust Gaussian Splatting SLAM by Leveraging Loop Closure (<a href="https://arxiv.org/pdf/2409.20111">Paper</a>) can be obtained.
-        </li>
-        
-        <li>
-          Our new paper, Open-Structure (<a href="https://arxiv.org/pdf/2310.10931.pdf">Paper</a> |
-          <a href="https://github.com/yanyan-li/Open-Structure">Code</a>), is accepted to RA-L2024.
-        </li>
-        <li>
-          Our new paper, GeoGaussian (<a href="project/gs/geogaussian">Project Website</a>), is accepted to ECCV2024.
-        </li>
-        <li>
-          I joined the CVRP group at NU Singapore as a Postdoc Research Fellow advised by <a href="https://www.comp.nus.edu.sg/~leegh/">Prof. Gim Hee Lee</a> from June, 2024.
+          <b>23, Jan.</b> Serve as Session Co-Chair for <span style="color:#0000FF;font-weight:bold;">3D Computer Vision 1&2 for AAAI-26</span>
         </li>
       </ul>
+
+      <!-- Current News Section -->
+      <details open>
+          <summary style=" cursor:pointer;   font-weight:600;   font-size:1.15em;   margin-bottom: 8px; ">
+            📅 2025
+          </summary>
+          <!-- <h3>News:</h3> -->
+          <ul>
+            <li>
+              <b>8, Nov.</b> Two <b>Oral papers</b> are accepted to <span style="color:#B31B1B;font-weight:bold;">AAAI 2026</span> in <a href="https://yanyan-li.github.io/project/gs/4dgsslam.html">RiemanLine Parametrization</a> and Active3D</a>.
+              [<a href="https://github.com/yanyan-li/RiemanLine/tree/master" >Source Code</a>|<a href="https://www.arxiv.org/pdf/2508.04335" >Paper</a>] of RiemanLine, [<a href="https://yanyan-li.github.io/project/vlx/active3d.html" >Project Page</a>] of Active3D.
+            </li>
+            <li>
+            <b>26, Oct.</b> Chaired the <span style="color:#0000FF;font-weight:bold;">Online Session 3 – Digital Image Processing and Applications</span> at IEEE ICRCV.
+            </li>
+            <li>
+              <b>11, Oct.</b> Appointed as an Associate Editor of <span style="color:#0000FF;font-weight:bold;">IEEE Robotics and Automation Letters</span> (<a href="https://www.ieee-ras.org/publications/ra-l">RA-L</a>). Looking forward to working with the great editorial board and contributing to the robotics community!     
+            </li>
+            <li>
+              <b>19, Sep.</b> One paper is accepted to <span style="color:#B31B1B;font-weight:bold;">NeurIPS 2025</span>: 4D3R: Motion-Aware Neural Reconstruction and Rendering of Dynamic Scenes from Monocular Videos.     
+            </li>
+            <li>
+              <b>18, Aug.</b> The review process of <a href="https://4drobotics-iros2025.github.io/">IROS2025 Workshop AIR4D</a> was completed. Looking forward to seeing you in Hangzhou! 
+            </li>
+            <li>
+              <b>6, Aug.</b> Our New <span style="color:#2ECC71;font-weight:bold;">arXiv</span> paper: Riemannian Manifold Representation of 3D Lines for Factor Graph Optimization. [<a href="https://arxiv.org/pdf/2508.04335">Paper</a> | <a href="https://github.com/yanyan-li/RiemanLine">Code</a>] can be obtained.
+            </li>
+            <li>
+              <b>27, June.</b> Three papers are accepted to <span style="color:#B31B1B;font-weight:bold;">ICCV 2025</span> in <a href="https://yanyan-li.github.io/project/gs/4dgsslam.html">4D SLAM</a>; <a href="https://arxiv.org/pdf/2508.06546">Scene Graph Prediction</a>; <a href="https://arxiv.org/pdf/2412.05548">Autonomous Driving Gaussian Splatting</a>.     
+            </li>
+            <li>
+              <b>25, June.</b> One paper is accepted to <span style="color:#B31B1B;font-weight:bold;">Computers & Graphics</span>.
+            <li>
+              Invited to give a talk at <span style="color:#B31B1B;font-weight:bold;">Tianjin University</span> on June 3, 2025: <span style="color:#033344;font-weight:bold;">Accurate Localization and Scene Reconstruction in 4D Space</span>.
+              </li>
+            <li>
+              <b>9, May.</b> We're excited to announce that the <span style="color:#0000FF;font-weight:bold;">1st Workshop on Advancements for Intelligent Robotics in 4D Scenes: Localization, Reconstruction, Rendering, and Generation</span> will be held in <span style="color:#B31B1B;font-weight:bold;">IROS 2025 (Hangzhou, China)</span>: <a href="https://4drobotics-iros2025.github.io/">Website </a> </li>
+            <li>
+              <b>15, April.</b> Our paper: 
+              SE (3)-Equivariance Learning for Category-level Object Pose Estimation 
+              (<a href="https://ieeexplore.ieee.org/abstract/document/10964769/">Paper</a>) is accepted to <span style="color:#B31B1B;font-weight:bold;">IEEE TIM 2025</span>.
+            </li>
+            <li>
+              <b>20, March.</b> Our new <span style="color:#2ECC71;font-weight:bold;">arXiv</span> paper: 
+              4D Gaussian Splatting SLAM 
+              (<a href="https://arxiv.org/abs/2503.16710">Paper</a>) can be obtained.
+            </li>
+            <li>
+              <b>11, March.</b> Our new <span style="color:#2ECC71;font-weight:bold;">arXiv</span> paper: 
+              Robust Surface Reconstruction 
+              (<a href="https://arxiv.org/abs/2503.08093">Paper</a>) can be obtained.
+            </li>    
+            <li>
+              <b>26, Fed.</b> Our paper: 
+              Learnable Infinite Taylor Gaussian for Dynamic View Rendering 
+              (<a href="https://arxiv.org/html/2412.04282v2">Paper</a>) is accepted to <span style="color:#B31B1B;font-weight:bold;">CVPR2025</span>.
+            </li>
+            <li>
+              <b>28, Jan.</b> Our paper: 
+              Lifelong Localization using Adaptive Submap Joining and Egocentric Factor Graph 
+              (<a href="https://arxiv.org/pdf/2409.10172">Paper&amp;Code</a>) is accepted to <span style="color:#B31B1B;font-weight:bold;">ICRA2025</span>.
+            </li>
+            <li>
+              <b>13, Jan.</b> Our new <a href="https://ieeexplore.ieee.org/abstract/document/10839262">paper</a> is accepted to <span style="color:#B31B1B;font-weight:bold;">IEEE Sensors Journal</span>
+            </li>
+          </ul>
+      </details>    
+          
+      <!-- News of 2024 Section -->
+      <!-- <h3>2024:</h3> -->
+      <details open>
+      <summary style=" cursor:pointer;   font-weight:600;   font-size:1.15em;   margin-bottom: 8px; ">
+        📅 2024
+      </summary>
+        <ul>
+          <li>
+            Our new paper, ShapeMaker, is accepted to CVPR2024.
+          </li>
+          <li>
+            Our New arXiv paper (28.Nov.2024): SmileSplat: Generalizable Gaussian Splats for Unconstrained Sparse Images (<a href="https://yanyan-li.github.io/project/gs/smilesplat.html">Project</a>) can be obtained.
+          </li>
+          <li> 
+            Our Paper (27.Nov.2024) got accepted for publication in IEEE TIM:
+            <ul>
+              <li>Accurate Visual Odometry by Leveraging 2DoF Bearing-Only Measurements</li>
+            </ul>
+          </li>
+          <li>
+            Our New arXiv paper (01.Oct.2024): Robust Gaussian Splatting SLAM by Leveraging Loop Closure (<a href="https://arxiv.org/pdf/2409.20111">Paper</a>) can be obtained.
+          </li>
+          
+          <li>
+            Our new paper, Open-Structure (<a href="https://arxiv.org/pdf/2310.10931.pdf">Paper</a> |
+            <a href="https://github.com/yanyan-li/Open-Structure">Code</a>), is accepted to RA-L2024.
+          </li>
+          <li>
+            Our new paper, GeoGaussian (<a href="project/gs/geogaussian">Project Website</a>), is accepted to ECCV2024.
+          </li>
+          <li>
+            I joined the CVRP group at NU Singapore as a Postdoc Research Fellow advised by <a href="https://www.comp.nus.edu.sg/~leegh/">Prof. Gim Hee Lee</a> from June, 2024.
+          </li>
+        </ul>
+      </details> 
     </div>
 
     
