--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,6 +14,9 @@ layout: base
   <h3>News:</h3>
       <ul>
         <li>
+            <b>31, Jan.</b> One paper is accepted to <span style="color:#B31B1B;font-weight:bold;"> ICRA 2026 </span> in Alias-free Gaussian Splatting SLAM. 
+            </li>
+        <li>
           <b>23, Jan.</b> Serve as Session Co-Chair for <span style="color:#0000FF;font-weight:bold;">3D Computer Vision 1&2 for AAAI-26</span>
         </li>
       </ul>
@@ -87,7 +90,7 @@ layout: base
           
       <!-- News of 2024 Section -->
       <!-- <h3>2024:</h3> -->
-      <details open>
+      <details >
       <summary style=" cursor:pointer;   font-weight:600;   font-size:1.15em;   margin-bottom: 8px; ">
         📅 2024
       </summary>
