--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,6 +14,9 @@ layout: base
   <h3>News:</h3>
       <ul>
         <li>
+            <b>7, Feb.</b> Serve as AE for <span style="color:#0000FF;font-weight:bold;"> IROS 2026 </span>
+            </li>
+        <li>
             <b>31, Jan.</b> One paper is accepted to <span style="color:#B31B1B;font-weight:bold;"> ICRA 2026 </span> in Alias-free Gaussian Splatting SLAM. 
             </li>
         <li>
